# soundinator

./: .gitignore  Procfile  README.md  Synthesiser Build Plan.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  serve_inspector.py
docs/: AUDITIONER_ILLUSTRATION_BRIEF.md  DAW_MODE_DESIGN.md  DEPLOYMENT.md  EFFECTS_CONTRACT.md  FACTORY_LIBRARY_PLAN.md  FORMANT_SPACE_DESIGN.md  HARMONY_PATCHES_PROPOSAL.md  HOSTINGER_DEPLOY.md  HOSTING_PLAN.md  HOSTING_STRATEGY.md  HOW_IT_WORKS.md  IMPLEMENTATION_STATUS.md  LAYER_UNIFICATION_NOTES.md  LAYER_UNIFICATION_PLAN.md  LAYOUT_REDESIGN_PROPOSAL.md  MEASURED_PROFILES.md  OWNER_BRIEF_2026-07-07.md  PARTIAL_MACROS_DESIGN.md  PHASE0_HOSTING.md  PRODUCER_UI_AUDIT_2026-07-08.md  PRODUCER_V2_DESIGN.md  PRODUCER_V3_SPEC.md  ROADMAP.md  SG2_PARAM_LEDGER.md  SMART_DROPDOWN_SPEC.md  SOUND_GENERATOR_2_PLAN.md  STUDIO_SECTIONS_UI_AUDIT_2026-07-08.md  TERMINOLOGY.md  TONE_MODEL_V2_DESIGN.md  UI_DIRECTION.md  UI_IMAGE_PROMPT.md  USER_MANUAL.md
examples/: mode_c.yml
scripts/: __init__.py  audit_pinned_components.mjs  export_factory_json.mjs  extract_kemar_hrir.mjs  fit_ear_models.mjs  fit_profiles_from_samples.py  gen_measured_profiles_module.py  render_note.mjs  seed_community_dev.py  sg2_compare_page.py  sg2_dashboard.py  sg2_listen_page.py  sg2_progress_page.py  verify_factory_library.mjs  verify_factory_sessions.mjs  verify_tone_model.mjs  vps_update.sh
tests/: test_accounts.py  test_blown_octave_residual.py  test_blown_octave_sweep.py  test_bow_noise.py  test_bowed_anatomy.py  test_community.py  test_export.py  test_generation.py  test_per_take_identity_fit.py  test_phase0_web.py  test_pitch.py  test_pitch_sync_breath.py  test_render_pipeline.py  test_sg2_listen_page.py  test_struck_pass18.py  test_sung_octave_residual.py  test_sung_pass10_refinement.py  test_sung_tone_match.py  (+1 more)
(+211 files in other folders)
